--- a/app.css
+++ b/app.css
@@ -102,6 +102,10 @@ h4 {
   will-change: transform;
   will-change: opacity; }
 
+h5 {
+  font-family: "Campton Bold";
+  color: black; }
+
 p {
   will-change: transform;
   will-change: opacity; }
