--- a/css/app.scss
+++ b/css/app.scss
@@ -89,6 +89,11 @@ h4 {
     will-change: opacity; 
 }
 
+h5 {
+    font-family: $title-font;
+    color: $primary-color;
+}
+
 p {
     will-change: transform;
     will-change: opacity; 
