--- a/css/app.scss
+++ b/css/app.scss
@@ -94,6 +94,12 @@ h5 {
     // color: $primary-color;
 }
 
+h6 {
+    font-family: $title-font;
+    color: $primary-color;
+    font-size: 22px;
+}
+
 p {
     will-change: transform;
     will-change: opacity; 
@@ -257,6 +263,24 @@ li.nav-item {
 
 button:focus {
     outline: none;
+}
+
+// .carousel-control-prev-icon {
+//     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+//    }
+
+// .carousel-control-next-icon {
+//     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+//   }
+
+.carousel-control-prev {
+    filter: invert(100%);
+    opacity: 1;
+}
+
+.carousel-control-next {
+    filter: invert(100%);
+    opacity: 1;
 }
 
 
