--- a/css/app.scss
+++ b/css/app.scss
@@ -804,6 +804,33 @@ section.contact-info {
     }
 }
 
+section.partner-logos {
+    padding: 160px 0;
+}
+
+div.col-5th {
+    width: 20%;
+    text-align: center;
+   
+    img {
+        transform: scale(0.5);
+    }
+
+    p {
+        text-align: center;
+    }
+
+    @media (max-width: 800px) {
+        width: 33.33%;
+     }
+
+     @media (max-width: 580px) {
+        width: 50%;
+     }
+
+
+}
+
 
 
 
