--- a/app.css
+++ b/app.css
@@ -164,8 +164,17 @@ a.inline-link {
 .mt-lg {
   margin-top: 120px; }
 
+.mt-md {
+  margin-top: 30px; }
+
 .mb-lg {
   margin-bottom: 120px; }
+
+.mb-l {
+  margin-bottom: 80px; }
+
+.mb-md {
+  margin-bottom: 30px; }
 
 .mb-sm {
   margin-bottom: 10px; }
@@ -555,6 +564,11 @@ section.contact-info {
 
 section.partner-logos {
   padding: 160px 0; }
+  section.partner-logos h2.partner-title {
+    margin-bottom: 100px; }
+    @media (max-width: 700px) {
+      section.partner-logos h2.partner-title {
+        margin-bottom: 80px; } }
 
 div.col-5th {
   width: 20%;
@@ -562,13 +576,18 @@ div.col-5th {
   div.col-5th img {
     transform: scale(0.5); }
   div.col-5th p {
-    text-align: center; }
+    text-align: center;
+    margin-top: -20px; }
+    @media (max-width: 700px) {
+      div.col-5th p {
+        margin-top: -30px; } }
   @media (max-width: 800px) {
     div.col-5th {
       width: 33.33%; } }
   @media (max-width: 580px) {
     div.col-5th {
-      width: 50%; } }
+      margin: auto;
+      width: 40%; } }
 
 /* ======== THE BUILDING ======== */
 section.hero.alt {
