--- a/css/app.scss
+++ b/css/app.scss
@@ -160,8 +160,20 @@ a.inline-link {
     margin-top: 120px;
 }
 
+.mt-md {
+    margin-top: 30px;
+}
+
 .mb-lg {
     margin-bottom: 120px;
+}
+
+.mb-l {
+    margin-bottom: 80px;
+}
+
+.mb-md {
+    margin-bottom: 30px;
 }
 
 .mb-sm {
@@ -806,6 +818,15 @@ section.contact-info {
 
 section.partner-logos {
     padding: 160px 0;
+
+    h2.partner-title {
+        margin-bottom: 100px;
+
+        @media (max-width: 700px) {
+            margin-bottom: 80px;
+         }
+    }
+
 }
 
 div.col-5th {
@@ -818,6 +839,11 @@ div.col-5th {
 
     p {
         text-align: center;
+        margin-top: -20px;
+
+        @media (max-width: 700px) {
+            margin-top: -30px;
+         }
     }
 
     @media (max-width: 800px) {
@@ -825,9 +851,9 @@ div.col-5th {
      }
 
      @media (max-width: 580px) {
-        width: 50%;
+         margin: auto;
+        width: 40%;
      }
-
 
 }
 
