--- a/app.css
+++ b/app.css
@@ -452,6 +452,13 @@ section.international-map {
   @media (max-width: 600px) {
     section.international-map {
       padding: 20px; } }
+  section.international-map div.map-title {
+    padding-bottom: 100px;
+    text-align: center;
+    max-width: 260px;
+    margin: auto; }
+    section.international-map div.map-title span {
+      font-size: 32px; }
 
 section.layout-slider h5 {
   color: black; }
