--- a/app.css
+++ b/app.css
@@ -120,7 +120,8 @@ img {
 
 a {
   will-change: transform;
-  will-change: opacity; }
+  will-change: opacity;
+  will-change: color; }
 
 a.external-link {
   text-decoration: underline;
@@ -159,6 +160,9 @@ a.inline-link {
   color: black;
   font-family: "Campton Bold";
   text-decoration: underline; }
+
+a:hover {
+  color: #d3d3d3; }
 
 /* helpers */
 .mt-lg {
@@ -455,8 +459,11 @@ section.international-map {
   section.international-map div.map-title {
     padding-bottom: 100px;
     text-align: center;
-    max-width: 260px;
+    max-width: 380px;
     margin: auto; }
+    @media (max-width: 600px) {
+      section.international-map div.map-title {
+        padding-bottom: 80px; } }
     section.international-map div.map-title span {
       font-size: 32px; }
 
@@ -513,7 +520,8 @@ section.quote-block {
 
 /* ======== LOCATION ======== */
 section.location {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 80px; }
   section.location div.container {
     margin-bottom: 40px; }
   section.location span.dash-top {
