--- a/css/app.scss
+++ b/css/app.scss
@@ -113,6 +113,7 @@ img {
 a {
     will-change: transform;
     will-change: opacity; 
+    will-change: color; 
 }
 
 a.external-link {
@@ -152,6 +153,10 @@ a.inline-link {
     color: $primary-color;
     font-family: $title-font;
     text-decoration: underline;
+}
+
+a:hover {
+    color: $lightgrey-link;
 }
 
 
@@ -617,7 +622,7 @@ main {
 }
 
 section.international-map {
-    // background-color: $primary-color;
+
     padding: 40px;
 
     @media (max-width: 600px) {
@@ -627,9 +632,12 @@ section.international-map {
     div.map-title {
         padding-bottom: 100px;
         text-align: center;
-
-        max-width: 260px;
+        max-width: 380px;
         margin: auto;
+
+        @media (max-width: 600px) {
+            padding-bottom: 80px;
+        }
 
         span {
             font-size: 32px;
@@ -723,7 +731,7 @@ section.quote-block {
 
 section.location {
     text-align: center;
-    // padding: 0px 0 0 0;
+    margin-bottom: 80px;
 
     div.container {
         margin-bottom: 40px;
