--- a/css/app.scss
+++ b/css/app.scss
@@ -610,6 +610,7 @@ section.additional {
 main {
     margin-bottom: 200px;
     background-color: $white-color;
+    overflow: hidden;
 }
 
 section.international-map {
