--- a/css/app.scss
+++ b/css/app.scss
@@ -628,7 +628,7 @@ section.additional {
 main {
     // margin-bottom: 200px;
     background-color: $white-color;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 section.international-map {
