--- a/app.css
+++ b/app.css
@@ -260,7 +260,6 @@ button:focus {
 /* ======== HERO ======== */
 section.hero {
   height: 100vh;
-  width: 100vw;
   position: relative;
   display: flex;
   justify-content: center;
@@ -465,8 +464,7 @@ section.additional {
         margin-top: 60px; } }
 
 main {
-  background-color: #fff;
-  overflow: hidden; }
+  background-color: #fff; }
 
 section.international-map {
   padding: 40px; }
