--- a/css/app.scss
+++ b/css/app.scss
@@ -299,7 +299,7 @@ button:focus {
 
 section.hero {
     height: 100vh;
-    width:100vw;
+    // width:100vw;
     position: relative;
     display: flex;
     justify-content: center;
