--- a/css/app.scss
+++ b/css/app.scss
@@ -628,7 +628,7 @@ section.additional {
 main {
     // margin-bottom: 200px;
     background-color: $white-color;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
 section.international-map {
@@ -751,10 +751,22 @@ section.location {
         font-size: 32px;
     }
 
-    video.block-level--video.fullwidth {
+    div.block-level--video.fullwidth {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+    }
+
+    .block-level--video.fullwidth iframe,
+    .block-level--video.fullwidth object,
+    .block-level--video.fullwidth embed {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        padding: 0;
-        transform: translateY(5px);
+        height: 100%;
     }
 
 
@@ -1081,6 +1093,24 @@ section.video-color--bg {
             width: 90%;
 
         }
+    }
+
+    div.block-level--video.fullwidth {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+    }
+
+    .block-level--video.fullwidth iframe,
+    .block-level--video.fullwidth object,
+    .block-level--video.fullwidth embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
 
